Fix overflow

--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -4,7 +4,6 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(35, 40, 45, 0.9);
     z-index: 3;
 
     .components-spinner {
